:sparkles: throw strikes

--- a/app/views/home/heritage.erb
+++ b/app/views/home/heritage.erb
@@ -10,11 +10,17 @@
     </div>
   </div>
   <div class="form-block">
-
+    <div class="announce-wrapper">
+      <div class="announce-heading">Authentically engage your students through Art.</div>
+      <div class="announce-subheading">For the month of November, in celebration of Native American Heritage Month we are offering a free download of our Totem Animal project.</div>
+    </div>
+    <div class="form-wrapper">
+      <%= render "shared/subscribe_new" %>
+    </div>
   </div>
-  <div class="announce-block">
-    <div class="announce-heading">Authentically engage your students through Art.</div>
-    <div class="announce-subheading">For the month of November, in celebration of Native American Heritage Month we are offering a free download of our Totem Animal project.</div>
+  <div class="thank-you-block">
+    <h2>Thank you for subscribing!</h2>
+    <a href="/materials/Totem-Animal_Scope-and-Sequence.pdf">Click here to download</a>
   </div>
   <div class="detail-block">
     <div class="detail-item one">
