--- a/app/assets/stylesheets/landing.scss
+++ b/app/assets/stylesheets/landing.scss
@@ -44,7 +44,57 @@
   }
 
   .form-block {
+    display: flex;
+    flex-direction: row;
+    margin-top: 7em;
 
+    .form-wrapper {
+      width: 50%;
+    }
+
+    .announce-wrapper {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      width: 50%;
+
+      .announce-heading {
+        font-size: 2em;
+        font-weight: bold;
+      }
+
+      .announce-subheading {
+        font-size: 1.3em;
+        margin-top: 1.5em;
+        padding-right: 2em;
+      }
+    }
+  }
+
+  .thank-you-block {
+    height: 200px;
+    display: none;
+
+    a {
+      background-color: $primary-blue;
+      color: white;
+      font-size: 1.5em;
+      padding: 15px 20px;
+      transition: 200ms ease;
+      border-radius: 0.75em;
+    }
+
+    a:hover {
+      background-color: $darker-blue;
+    }
+
+    &.show {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
   }
 
   .announce-block {
