--- a/app/views/shared/_subscribe_new.html.erb
+++ b/app/views/shared/_subscribe_new.html.erb
@@ -1,5 +1,26 @@
 <!-- Begin MailChimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+<script type="text/javascript">
+jQuery(document).ready(function($) {
+    $('#mc-embedded-subscribe-form').submit(function (e) {
+        e.preventDefault();
+        $.ajax({
+            url: '//doodles-academy.us10.list-manage.com/subscribe/post?u=28ca6056cf1fcbb59340d2de6&id=434752e97b',
+            type: 'GET',
+            data: $('#mc-embedded-subscribe-form').serialize(),
+            dataType: 'jsonp',
+            contentType: "application/json; charset=utf-8",
+            success: function (data) {
+               if (data['result'] !== "success") {
+                  console.log(data['msg']);
+               } else {
+                 $('#thank-you-block').addClass('show');
+               }
+            }
+        });
+    });
+});
+</script>
 <style type="text/css">
 #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
 /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
@@ -33,25 +54,3 @@ We recommend moving this block and the preceding CSS link to the HEAD of your HT
 </div>
 <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 <!--End mc_embed_signup-->
-<script type="text/javascript">
-jQuery(document).ready(function($) {
-    $('#mc-embedded-subscribe-form').submit(function (e) {
-        console.log("alex");
-        e.preventDefault();
-        $.ajax({
-            url: '//doodles-academy.us10.list-manage.com/subscribe/post?u=28ca6056cf1fcbb59340d2de6&id=434752e97b',
-            type: 'GET',
-            data: $('#mc-embedded-subscribe-form').serialize(),
-            dataType: 'jsonp',
-            contentType: "application/json; charset=utf-8",
-            success: function (data) {
-               if (data['result'] !== "success") {
-                  console.log(data['msg']);
-               } else {
-                 $('thank-you-block').addClass('show');
-               }
-            }
-        });
-    });
-});
-</script>
