oops id not class

--- a/app/views/home/heritage.erb
+++ b/app/views/home/heritage.erb
@@ -18,7 +18,7 @@
       <%= render "shared/subscribe_new" %>
     </div>
   </div>
-  <div class="thank-you-block">
+  <div id="thank-you-block">
     <h2>Thank you for subscribing!</h2>
     <a href="/materials/Totem-Animal_Scope-and-Sequence.pdf">Click here to download</a>
   </div>
