--- a/app/assets/stylesheets/landing.scss
+++ b/app/assets/stylesheets/landing.scss
@@ -75,6 +75,9 @@
   .thank-you-block {
     height: 200px;
     display: none;
+    width: 100%;
+    text-align: center;
+    margin-top: 2em;
 
     a {
       background-color: $primary-blue;
@@ -94,6 +97,10 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
+    }
+
+    h2 {
+      margin-bottom: 2em;
     }
   }
 
@@ -121,7 +128,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-top: 7em;
+    margin-top: 3em;
 
     .detail-item {
       width: 30%;
