--- a/app/assets/stylesheets/donate.scss
+++ b/app/assets/stylesheets/donate.scss
@@ -14,6 +14,10 @@
     align-content: center;
   }
 
+  .donation-image {
+    margin: 25px 0;
+  }
+
   .donation-inner-header {
     display: flex;
     flex-direction: column;
