--- a/app/views/home/donate.html.erb
+++ b/app/views/home/donate.html.erb
@@ -1,13 +1,21 @@
 <div class="donation-wrapper">
   <div class="donation-header">
     <div class="donation-inner-header">
-      <h1>Donate to Doodles Academy</h1>
+      <h1>#GivingTuesday</h1>
     </div>
   </div>
   <div class="donation-body-wrapper">
     <div class="donation-info">
       <div class="donation-blurb">
-        <p>Your donation directly supports our mission, and allows us to offer our program for free, no strings attached, to any family, school, or community center who needs it.</p>
+        <h2>Give today, impact forever.</h2>
+        <p>We work to close the opportunity gap to art education so all students can learn the skills they need to be successful, creative, and innovative adults.</p>
+      </div>
+      <div class="donation-image">
+        <%= image_tag('giving-tuesday.png') %>
+      </div>
+      <div class="donation-blurb">
+        <p>Over the last year, Doodles Academy has provided high quality visual art lessons to more teachers than ever before: we currently have 1300 registered educators using Doodles lessons, reaching approximately 29,000 students.</p> 
+        <p>This #GivingTuesday, you can help by making a donation to support our mission to expand children's access to high quality arts education.</p> 
       </div>
       <div class="donation-testimonial">
         <p>“I am a second grade teacher at a low SES school in Reno, Nevada. [...] I see a huge connection with kids who are struggling at home to meet their basic needs and art. When given the opportunity to express themselves through art they are able to communicate their pain, their dreams, their desires and their hopes. It is like magic.“</p>
@@ -22,3 +30,4 @@
     </div>
   </div>
 </div>
+
