:sparkles: update donorbox widget

--- a/app/views/home/donate.html.erb
+++ b/app/views/home/donate.html.erb
@@ -26,7 +26,7 @@
       </div>
     </div>
     <div class="donation-widget">
-      <script src="https://donorbox.org/widget.js" paypalExpress="false"></script><iframe src="https://donorbox.org/embed/donations-463?hide_donation_meter=true" height="685px" width="100%" style="max-width:500px; min-width:310px; max-height:none!important" seamless="seamless" name="donorbox" frameborder="0" scrolling="no" allowpaymentrequest></iframe>
+      <script src="https://donorbox.org/widget.js" paypalExpress="true"></script><iframe src="https://donorbox.org/embed/eoy-campaign-2?amount=50" height="685px" width="100%" style="max-width:500px; min-width:310px; max-height:none!important" seamless="seamless" name="donorbox" frameborder="0" scrolling="no" allowpaymentrequest></iframe>
     </div>
   </div>
 </div>
