:sparkles: update donate banner text

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
     <%= yield %>
     <div class="giving-banner">
       <h2>Give today, impact forever.</h2>
-      <div class="subtext">This #givingtuesday, help us close the opportunity gap so that all students can become successful, creative, and innovative adults.</div>
+      <div class="subtext">The skills students learn through the arts lead to lifelong success. Make your year-end financial gift today.</div>
       <div class="cta">
         <a href="<%= donate_link %>">Donate</a>
       </div>
