--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -49,7 +49,12 @@
               <h3><%= product.full_title %></h3>
             </div>
             <div class="product-price">
-              <%= product.formatted_price %>
+              <% unless product.full_price.nil? %>
+                <div class="product-full-price">
+                  <%= product.formatted_full_price %>
+                </div>
+              <% end %>
+              <%= product.formatted_full_price.nil? ? product.formatted_price : "Sale price: #{product.formatted_price}" %>
             </div>
           </div>
         </div>
