--- a/app/views/store/product.html.erb
+++ b/app/views/store/product.html.erb
@@ -17,7 +17,10 @@
         <h2><%= @product.full_title %></h2>
       </div>
       <div class="product-price">
-        <%= @product.formatted_price %>
+        <% unless @product.full_price.nil? %>
+          <div class="product-full-price"><%= @product.formatted_full_price %></div>
+        <% end %>
+        <%= @product.full_price.nil? ? @product.formatted_price : "Sale price: #{@product.formatted_price}" %>
       </div>
       <div class="product-purchase">
         <a href="/store/checkout?sku=<%= @product.sku %>">Add to Cart</a>
