--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,14 @@
+.coschedule {
+  .logo {
+    width: 50%;
+    margin: 0 auto 40px auto;
+  }
+
+  p, li {
+    font-size: 1.2em;
+  }
+}
+
 .giving-banner {
   position: fixed;
   bottom: 0;
