--- a/app/views/donors/index.html.erb
+++ b/app/views/donors/index.html.erb
@@ -30,10 +30,11 @@
 
   <p>Portland Child Art Studio believes that child art is about engaging in a natural creative process rather than just about producing things that we judge to be aesthetically pleasing.  They believe in the power of artistic learning, experimentation, exploration, play, and discovery as the foundation upon which children will begin to build a lifelong relationship with art.</p>
 
-  <p>Through Portland Child Art Studio, we are able to workshop our projects in actual classes before they are offered online. <a href="/classes">View available classes here</a>.</p>
+  <p>Through Portland Child Art Studio, we are able to workshop our projects in actual classes before they are offered online.</p>
 
-  <p>If you are interested in signing up for a class, please visit the <a href="/classes">PDX Class page</a>.</p>
-
-  <br/>
+  <div class="additional-thanks">
+    <div class="logo"><%= image_tag 'coschedule-logo' %></div>
+    <div class="content"><p>Additional thanks to CoSchedule for supporting us with marketing tools. <a href="/coschedule">Learn more here</a>.</p></div>
+  </div>
 
 </div>
