--- a/app/views/home/coschedule.html.erb
+++ b/app/views/home/coschedule.html.erb
@@ -4,6 +4,10 @@
   </div>
   <p><a href="https://coschedule.com/">CoSchedule</a> is an online marketing calendar with a robust catalog of marketing tools that allows organizations big and small to plan, create, and promote online content in one centralized place. The tools created by CoSchedule are simple, yet effective, and make it easy to manage a marketing campaign. Working with Doodles Academy, CoSchdedule provides invaluable support for our small, rotating team of volunteer marketers. In addition to working with us to ensure affordability, CoSchedule allows us to stay consistent in our communications and online presence, despite working without a dedicated marketing manager.</p>
   <p>Doodles Academy is entirely volunteer run, and is supported primarily through small, individual donations, This means that we have a team of energetic and dedicated volunteers working to bring art into classrooms throughout the world. It also means that our work can often be chaotic, with projects switching hands depending on a volunteers availability. This is where CoSchedule has become an invaluable resource for us.</p>
+  <div class='coschedule-screenshot'>
+    <%= image_tag 'CoSchedule_Dashboard' %>
+    <div class='caption'>The CoSchedule dashboard</div>
+  </div>
   <p>First and foremost, CoSchedule works with us to train both existing and incoming volunteers and interns more effectively, which in turn leaves more time for us to develop the projects and content that we need to work towards our mission. They do this through:</p>
   <ol>
     <li>Offering one-on-one support on demand, through email, or chat</li>
@@ -11,6 +15,10 @@
     <li>An 'Academy' that interns and volunteers can use to learn more about best practices in marketing.</li>
   </ol>
   <p>In addition to the support and training opportunities that they offer, their software supports a consistent online presence through tools that automatically post our content at high-traffic times, and help to train new (and old!) volunteers through content editing software and suggestions. This is invaluable to us as we often have new or rotating volunteers who have a different style or methodology, and it takes the guesswork out of both creating, editing, and posting for these volunteers.</p>
+  <div class='coschedule-screenshot'>
+    <%= image_tag 'CoSchedule_Marketing-Projects' %>
+    <div class='caption'>The CoSchedule marketing projects page</div>
+  </div>
   <p>Finally, CoSchedule gathers all our communications into one place, so that we can see what we are sharing and who we are sharing it with at a glance. This is important in two ways:</p>
   <ol>
     <li>It enables us to better segment our communications so that we are sharing more relevant content. For example, it makes it easy for us to communicate with educators and donors separately; a task that prior to working with CoShedule was overwhelming.</li>
