update coming soon in store

--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -63,6 +63,11 @@
   </div>
   <div class="coming-soon">
     <h3>Coming Soon: Supply Kits &amp; Professional Development Modules</h3>
-    <p>In the works are Supply Kits and P.D. Modules, to be released in the 2018/2019 school year. Sign up below to be notified of new releases.</p>
+    <p>We are excited to be working on some great new curricular supports:</p>
+    <ol>
+      <li>Online training: how to best use Doodles Academy, designed for classroom teachers, art teachers, and administrators</li>
+      <li>Wide range of PD opportunities and PLCs for teachers</li>
+      <li>Supply kits designed to work with our curriculum sets</li>
+    </ol>
   </div>
 </div>
