update erb with new content

--- a/app/views/home/donate.html.erb
+++ b/app/views/home/donate.html.erb
@@ -6,27 +6,61 @@
   </div>
   <div class="donation-body-wrapper">
     <div class="donation-info">
-      <div class="donation-blurb">
-        <h2>Give today, impact forever.</h2>
-        <p>The skills students learn in the arts lead to lifelong success. Make your year-end financial gift today.</p>
+      <div>
+        <h2>Give today, impact forever</h2>
+        <h3>The skills students learn in the arts lead to lifelong success.</h3>
       </div>
-      <div class="donation-image">
-        <%= image_tag('giving-tuesday.png') %>
+      <figure class="donation-image">
+        <%= image_tag('giving-tuesday-first-grade-class.jpg') %>
+        <figcaption>Mrs. D'Amelio's 1st grade class, Anacortes, WA</figcaption>
+      </figure>
+      <div>
+        <p>Over the last year, Doodles Academy has provided high-quality visual art lessons to more teachers than ever before: we currently have nearly 3300 registered educators using Doodles lessons, reaching approximately 75,900 students.<a href="#footnote-star">&ast;</a></p> 
       </div>
-      <div class="donation-blurb">
-        <p>Over the last year, Doodles Academy has provided high quality visual art lessons to more teachers than ever before: we currently have 1300 registered educators using Doodles lessons, reaching approximately 29,000 students.</p> 
-        <p><b>To see more highlights from this year, please view our 2018 End-of-Year Report, <a href="/docs/2018_ImpactReport_DA_Web.pdf">available here</a>.</b></p> 
+      <div>
+        <h2>Why Donate to Doodles Academy?</h2>
+        <h3>Innovative Programming</h3>
+        <p>We are an online art curriculum that supports students in creating their own authentic artworks and is adaptable to allow teachers to put their unique spin on the learning experience for their students.</p>
       </div>
-      <div class="donation-testimonial">
-        <p>“I am a second grade teacher at a low SES school in Reno, Nevada. [...] I see a huge connection with kids who are struggling at home to meet their basic needs and art. When given the opportunity to express themselves through art they are able to communicate their pain, their dreams, their desires and their hopes. It is like magic.“</p>
-        <p>-Janelle Mousel</p>
+      <figure class="donation-image">
+        <%= image_tag('giving-tuesday-fifth-grade-class.jpg') %>
+        <figcaption>Mr.Grossman's 5th Grade class, Reno, NV</figcaption>
+      </figure>
+      <div>
+        <h3>Large Reach</h3>
+        <p>Through our virtual distribution, we are able to reach more students in more locations, while keeping operational costs down.</p>
+        <p>For every $1.07 you donate, we are able to bring art to an entire class of students.<a href="#footnote-star-2">&ast;&ast;</a></p>
+        <p>We work towards closing the opportunity gap by making sure that our curriculum is easy to implement whether or not educators have a background in the arts.</p>
+      </div>
+      <figure class="donation-image">
+        <%= image_tag('giving-tuesday-large-reach.png') %>
+      </figure>
+      <div>
+        <h3>Consider a Small, Monthly, Sustaining Donation</h3>
+        <p>If you find value in what we do, please consider making a recurring monthly donation of your choosing. It takes us hundreds of hours a month to research, compose, and market our content, and thousands of dollars a year to sustain. Your support, in any amount, really matters.</p>
+        <p>Here’s how:</p>
+        <ol>
+          <li>
+            <h4>It provides predictable revenue.</h4>
+            <p><i>Monthly giving helps us avoid peaks and valleys of revenue, ensuring we can spend less time on fundraising and more time on strategic planning, marketing, lesson development, outreach, and teacher training.</i></p>
+          </li>
+          <li>
+            <h4>Simply put, it sustains our work.</h4>
+            <p><i>Sustaining Patrons support the day-to-day work of Doodles Academy and demonstrate an ongoing commitment to our mission.</i></p>
+          </li>
+        </ol>
+      </div>
+      <hr />
+      <div class="footnotes">
+        <p id="footnote-star" class="footnote">&ast;users X average class size of 23</p>
+        <p id="footnote-star-2" class="footnote">&ast;&ast;expenses/registered users</p>
       </div>
       <div class="donation-footer">
-        <p>Doodles Academy is a <strong>501(c)3</strong> and donations are tax deductible to the extent allowed by law. <strong>EIN: 47-4434306</strong>.</p>
+        <p>Doodles Academy is a Section 501(c) (3) charitable organization, EIN 47-4434306. All donations are deemed tax-deductible absent any limitations on deductibility applicable to a particular taxpayer. No goods or services were provided in exchange for your contribution.</p>
       </div>
     </div>
     <div class="donation-widget">
-      <script src="https://donorbox.org/widget.js" paypalExpress="true"></script><iframe src="https://donorbox.org/embed/eoy-campaign-2?amount=50" height="685px" width="100%" style="max-width:500px; min-width:310px; max-height:none!important" seamless="seamless" name="donorbox" frameborder="0" scrolling="no" allowpaymentrequest></iframe>
+      <script src="https://donorbox.org/widget.js" paypalExpress="true"></script><iframe src="https://donorbox.org/embed/2019-20-eoy-campaign-2?amount=50" height="685px" width="100%" style="max-width:500px; min-width:310px; max-height:none!important" seamless="seamless" name="donorbox" frameborder="0" scrolling="no" allowpaymentrequest></iframe>
     </div>
   </div>
 </div>
